tests/rosetta/out/Fortran/checkpoint-synchronization-2.error
gfortran: exit status 1
/tmp/checkpoint-synchronization-2.f90:32:46:

   32 |   recursive character(len=100) function lower(ch) result(res)
      |                                              1
Error: Procedure ‘lower’ at (1) has an explicit interface from a previous declaration
/tmp/checkpoint-synchronization-2.f90:33:40:

   33 |     character(len=100), intent(in) :: ch
      |                                        1
Error: Unexpected data declaration statement in CONTAINS section at (1)
/tmp/checkpoint-synchronization-2.f90:34:40:

   34 |     upper = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'
      |                                        1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/checkpoint-synchronization-2.f90:35:40:

   35 |     lower = 'abcdefghijklmnopqrstuvwxyz'
      |                                        1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/checkpoint-synchronization-2.f90:36:9:

   36 |     i = 0
      |         1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/checkpoint-synchronization-2.f90:37:23:

   37 |     do while ((i < 26))
      |                       1
Error: Unexpected DO statement in CONTAINS section at (1)
/tmp/checkpoint-synchronization-2.f90:38:27:

   38 |       if ((ch == upper(i+1:(i + 1)))) then
      |                           1
Error: Syntax error in argument list at (1)
/tmp/checkpoint-synchronization-2.f90:39:24:

   39 |         res = lower(i+1:(i + 1))
      |                        1
Error: Syntax error in argument list at (1)
/tmp/checkpoint-synchronization-2.f90:40:14:

   40 |         return
      |              1
Error: Unexpected RETURN statement in CONTAINS section at (1)
/tmp/checkpoint-synchronization-2.f90:41:9:

   41 |       end if
      |         1
Error: Expecting END PROGRAM statement at (1)
/tmp/checkpoint-synchronization-2.f90:42:17:

   42 |       i = (i + 1)
      |                 1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/checkpoint-synchronization-2.f90:43:7:

   43 |     end do
      |       1
Error: Expecting END PROGRAM statement at (1)
/tmp/checkpoint-synchronization-2.f90:44:12:

   44 |     res = ch
      |            1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/checkpoint-synchronization-2.f90:45:10:

   45 |     return
      |          1
Error: Unexpected RETURN statement in CONTAINS section at (1)
/tmp/checkpoint-synchronization-2.f90:46:5:

   46 |   end function lower
      |     1
Error: Expecting END PROGRAM statement at (1)
/tmp/checkpoint-synchronization-2.f90:15:13:

   15 |   partList = (/'A','B','C','D'/)
      |             1
Error: Cannot convert CHARACTER(1) to INTEGER(4) at (1)
/tmp/checkpoint-synchronization-2.f90:23:14:

   23 |       print *, p // ' worker begins part'
      |              1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(19)
/tmp/checkpoint-synchronization-2.f90:24:20:

   24 |       print *, trim(p // ' worker completed ') // lower(p)
      |                    1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(18)
/tmp/checkpoint-synchronization-2.f90:25:11:

   25 |       a = (a + lower(p))
      |           1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
