tests/rosetta/out/Fortran/checkpoint-synchronization-2.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program checkpoint_synchronization_2
  implicit none
  integer, dimension(4) :: partList
  integer :: nAssemblies
  integer :: cycle
    character(len=100) :: s0
    character(len=100) :: a
    integer :: p
    integer :: i1
    character(len=100) :: s2
    integer :: upper
    integer :: lower
    integer :: i
  partList = (/'A','B','C','D'/)
  nAssemblies = 3
  do cycle = 1, ((nAssemblies + 1))
    write(s0,'(G0)') cycle
    print *, 'begin assembly cycle ' // s0
    a = ''
    do i1 = 1, size(partList)
      p = partList(i1)
      print *, p // ' worker begins part'
      print *, trim(p // ' worker completed ') // lower(p)
      a = (a + lower(p))
    end do
    write(s2,'(G0)') cycle
    print *, trim(trim(a // ' assembled.  cycle ') // s2) // ' complete'
  end do
  
  contains
  recursive character(len=100) function lower(ch) result(res)
    character(len=100), intent(in) :: ch
    upper = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'
    lower = 'abcdefghijklmnopqrstuvwxyz'
    i = 0
    do while ((i < 26))
      if ((ch == upper(i+1:(i + 1)))) then
        res = lower(i+1:(i + 1))
        return
      end if
      i = (i + 1)
    end do
    res = ch
    return
  end function lower
end program checkpoint_synchronization_2
